update covid19 bg image

--- a/assets/css/mlscn.css
+++ b/assets/css/mlscn.css
@@ -174,13 +174,12 @@ body {
     border-color: white;
 }
 
-#covid19WBI{
-    background-image: linear-gradient(rgba(65, 131, 1, 0.5), rgba(33, 67, 0, 0.5)), url('../images/logo.png');
-
+.bg-image-logo{
+    background-image: linear-gradient(rgba(33, 67, 0, 0.8), rgba(23, 47, 0, 0.8)), url('../images/logo.png');
+    background-size: contain;
     background-position: center; /* Center the background image */
     background-repeat: no-repeat; /* Prevent the image from repeating */
     width: 100%; /* Example width */    
-    height: 400px; /* Example height */
 }
 
 /* Extra small devices (portrait phones, less than 576px) */
