--- a/assets/css/mlscn.css
+++ b/assets/css/mlscn.css
@@ -1,6 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 @font-face {
     font-family: 'Graphit';
-    src: url('../fonts/graphit-font/Graphit-Regular.otf');
+    src: url('../fonts/graphit-font/Graphit-Regular.otf') format('opentype');
+    font-style: normal;
 }
 
 @font-face {
@@ -16,14 +20,23 @@
 @font-face {
     font-family: 'Graphit Regular';
     src: url('../fonts/graphit-font/Graphit-Regular.otf');
+    font-weight: 300;
+    font-style: normal;
+}
+
+*,*::after,*::before{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 :root {
     --mlscn-green: #214300;
+    --mlscn-green-gradient:linear-gradient(180deg, #418301 100%, #214300 100%);
     --mlscn-light-green: #418301;
     --mlscn-yellow: #F5FD01;
     --mlscn-black: #000000;
-    --mlscn-font-graphit: Graphit;
+    --mlscn-font-graphit: 'Graphit';
     --mlscn-font-graphit-regular: 'Graphit Regular';
     --mlscn-font-graphit-bold: 'Graphit Bold';
     --mlscn-font-graphit-light: 'Graphit Light';
@@ -32,7 +45,7 @@
 }
 
 body {
-    font-family: 'Graphit';
+    font-family: 'Graphit', sans-serif;
 }
 
 .mlscn-graphit-light {
@@ -69,6 +82,10 @@ body {
 
 .mlscn-bg-green {
     background-color: var(--mlscn-green);
+}
+
+.mlscn-green-gradient {
+    background: var(--mlscn-green-gradient);
 }
 
 .mlscn-bg-light-green {
@@ -168,7 +185,6 @@ body {
     margin-bottom: .25rem;
 }
 .mlscn-news-card-body:hover , .mlscn-news-card-body:hover *  {
-
     background-color: var(--mlscn-green);
     color: white;
     border-color: white;
@@ -181,6 +197,388 @@ body {
     background-repeat: no-repeat; /* Prevent the image from repeating */
     width: 100%; /* Example width */    
 }
+
+/* ARTICLE SECTION */
+.mlscn-article-section {
+    /* min-height: 100vh; */
+    margin-top: 67px;
+}
+
+.article-margin{
+    margin-top: 67px; 
+}
+.mlscn-article--para {
+    font-family: 'Graphit';
+    font-weight: 500;
+    font-size: 31px;
+    line-height: 38.22px;
+    color: var(--mlscn-green);
+}
+.mlscn-article--link {
+    font-family: 'Graphit Light';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24.66px;
+    color: var(--mlscn-green);
+    text-align: left;
+    text-decoration: none;
+}
+
+.mlscn-article--link:hover {
+    color: var(--mlscn-green);
+}
+
+.mlscn-article--card {
+    /* width: 250px; */
+    height: 228px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.mlscn-card--title{
+    font-family: 'Graphit';
+    font-size: 25px;
+    font-weight: 700;
+    line-height: 30.83px;
+    text-align: left;
+    margin-bottom: -10px;
+
+}
+
+.mlscn-card--text{
+    font-family: 'Graphit';
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 12.33px;
+}
+
+.mlscn-card-footer{
+    background-color: var(--mlscn-green);
+    color: #ffffff;
+}
+/* ARTICLE SECTION */
+
+/* DISCLAIMER SECTION */
+.mlscn-disclaimer--section{
+    height: 100%;
+    min-height: 80vh;
+  padding-top: 45px;
+  margin-bottom: 29px;
+}
+
+.mlscn-disclaimer--container{
+    display: flex;
+    flex-direction: column;
+
+}
+
+.mlscn-disclaimer--card{
+    width: 508px;
+    height: 81px;
+    padding-top: 29px;
+    padding-left: 24px;
+   border-radius: 30px 30px 0px 0px;
+   background-color: #B3B3B3;
+}
+
+.mlscn-disclaimer--para{
+    font-family: 'Graphit';
+    font-size: 29px;
+    font-weight: 500;
+    line-height: 35.76px;
+    text-align: left;    
+}
+
+.mlscn-article--para2 {
+    font-family: 'Graphit';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22.19px;
+    text-align: justify;
+    max-width: 508px;
+    color: #000000;
+
+}
+
+.mlscn-disclaimer-black--card{
+    width: 281px;
+    height: 81px;
+    padding: 29px 30px 16px 31px;
+    gap: 0px;
+    border-radius: 30px 30px 0px 0px;
+    opacity: 0px;
+    background-color: #000000;
+
+}
+
+.mlscn-disclaimer-y--para {
+    font-family: Graphit;
+    font-size: 29px;
+    font-weight: 700;
+    line-height: 35.76px;
+    text-align: left;
+    color: #F5FD01;    
+}
+
+.mlscn-disclaimer-green--card {
+    width: 280px;
+    height: 439px;
+    padding: 25px 16px 364px 5px;
+    border-radius: 0px 0px 30px 30px;
+    opacity: 0px;
+    background: linear-gradient(180deg, #356A00 0%, #214300 100%);
+
+}
+
+@media  (min-width:768px) {
+    .mlscn-disclaimer--section{
+      padding-top: 90px;
+      margin-bottom: 78px;
+    }
+    
+    .mlscn-disclaimer--container{
+        flex-direction: row;
+        justify-content: space-between;
+    
+    }
+    
+    .mlscn-disclaimer--card{
+       background-color: #B3B3B3;
+    }
+    
+    .mlscn-disclaimer--para{
+        font-family: 'Graphit';
+        font-size: 29px;
+        font-weight: 500;
+        line-height: 35.76px;
+        text-align: left;    
+    }
+    
+    .mlscn-article--para2 {
+        font-family: 'Graphit';
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 22.19px;
+        text-align: justify;
+        max-width: 508px;
+        color: #000000;
+    
+    }
+
+}
+/* DISCLAIMER SECTION */
+
+/* NEWS PAGE  */
+.mlscn-news__img {
+    background-image: url(../images/news_img.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 186px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.mlscn-news__header{
+    font-family: 'Graphit';
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 43.16px;
+    text-align: left;
+    color: var(--mlscn-green);
+    padding-left: 60px;
+    text-transform: uppercase;
+}
+
+.mlscn-home-back--link {
+    font-family: 'Graphit';
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 36.99px;
+    text-align: left;
+    color:#8D8D8D;
+    text-decoration: none;
+    margin-bottom: 55px;
+    
+}
+
+.mlscn-home-back--link:hover {
+    color: var(--mlscn-light-green);
+}
+
+.mlscn-news-card{
+   border: 0;
+   border-radius: 0px 0px 20px 20px;
+   box-shadow: 0px 4px 4px 0px #00000040;
+   max-width: 337px;
+   min-height: 411px;
+}
+
+.mlscn-news-card--title {
+    font-family: 'Graphit';
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 17.26px;
+    text-align: left;
+    color: #214300;
+
+}
+
+.mlscn-news-card--date{
+    font-family: 'Graphit';
+    font-size: 9px;
+    font-weight: 400;
+    line-height: 11.1px;
+    text-align: left;
+    
+}
+
+.mlscn-news-card--border{
+    /* border-width: 15px;
+    border-left: 2px;
+    border-color: #000000; */
+    border: 1px solid #000000;
+    height: 15px;
+    margin-left: 7px;
+    margin-right: 3px;
+}
+
+.mlscn-news-card--para {
+    font-family: 'Graphit';
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 12.33px;
+    text-align: left;
+
+}
+
+.mlscn-news-card--btn {
+    /* width: 55px; */
+    height: 20px;
+    padding: 5px 10px 5px 10px;
+    /* gap: 10px; */
+    border-radius: 13px;
+    border: 2px solid var(--mlscn-green);
+    font-family: 'Graphit';
+    font-size: 8px;
+    font-weight: 500;
+    line-height: 9.86px;
+    text-align: left;
+
+}
+
+.pagination {
+    width: 299px;
+    border: none;
+    border-radius: 26px;
+    background: #F7F9FF;
+    box-shadow: 0px 4px 4px 0px #00000033 !important;
+}
+
+ .page-item {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    margin-right: 5px;
+    padding: 4px;
+}
+
+.page-link {
+    background: transparent !important;
+    border: none !important; 
+    font-family: 'Lato', sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 14.4px;
+    text-align: center;
+    color: #656565;
+}
+
+.page-link:hover {
+    color: var(--mlscn-green) !important;
+}
+
+.page-item.active{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px !important;
+    height: 28px !important;
+    border-radius: 50% !important;
+    background-color: #418301 !important;
+    color: #ffffff;
+}
+
+.mlscn-news-pagination--icon{
+    margin-right: 48px;
+}
+
+.mlscn-news-pagination--icon-right{
+    margin-left: 42px;
+}
+
+/* NEWS PAGE  */
+/* FOOTER */
+.mlscn-footer {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 365px;
+    max-height: 100%;
+    background: linear-gradient(180deg, #285100 0%, #152C00 100%);
+    color: #ffffff;   
+}
+.mlscn-footer--left{
+    padding-top:67px;
+    padding-left: 83px;
+    max-width: 429px;
+}
+
+.mlscn-brand-logo--footer{
+    width: 143px;
+    height: 143px;
+
+}
+.mlscn-footer--para{
+    padding-top: 21px;
+    font-family: var(--mlscn-font-graphit-light);
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 24.66px;
+}
+
+.mlscn-footer--right{
+    padding-top:64px;
+    padding-right: 65px;
+}
+
+.mlscn-footer--para2{
+    font-family: 'Graphit';
+    color: var(--mlscn-yellow);
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30.83px;
+}
+
+.mlscn-footer--right ul {
+    margin: 0;
+    padding: 0;
+}
+
+.mlscn-footer--right a {
+    font-family: var(--mlscn-font-graphit-light);
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 20.96px;
+    text-align: justify;
+    text-decoration: none;
+    color: #ffffff;
+
+}
+/* END OF FOOTER */
 
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
