--- a/assets/css/mlscn.css
+++ b/assets/css/mlscn.css
@@ -745,7 +745,9 @@ tbody tr td {
 }
 
 @media screen and (min-width:768px) {
-    
+    .table {
+        width: 975px;
+    }
     .mlscn-govBody__header{
         font-size: 35px;
         line-height: 43.16px;
