--- a/assets/css/mlscn.css
+++ b/assets/css/mlscn.css
@@ -929,6 +929,458 @@ tbody tr td {
     }
 }
 /* MANAGEMENT TEAM CARD */
+/* MLSCN APPROVED INTERNSHIP */
+.mlscn-intern-navbar__bg {
+    height: 102px;
+    background-color: #E7E7E7;
+    border-bottom: 1px solid #BE9400;
+}
+
+.fa-sort-up {
+    width: 14px;
+     height: 20px;
+}
+
+.fa-sort-down {
+  width: 14px; 
+  height: 20px;
+}
+.mlscn-intern__img {
+    background-image: url(../images/news_img.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 186px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 5px 7.9px 0px #00000033;
+}
+.mlscn__show {
+    font-family: 'Graphit';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24.66px;
+    margin-right: 6px;
+
+}
+.mlscn__entries {
+    font-family: 'Graphit';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24.66px;
+    margin-left: 6px;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+.mlscn-custom__input{
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+.mlscn-custom__input input[type="number"]{
+    width: 88px;
+    height: 42px;
+    padding: 9px 16.16px 8px 20px;
+    border-radius: 40px;
+    background-color: var(--mlscn-light-green);
+    color: #ffffff;
+    box-shadow: 0px 4px 4px -1px #00000040;
+}
+
+.mlscn-custom__input .fa-sort-up{
+  position: absolute;
+  right:10px;
+  user-select: none;
+  cursor: pointer;
+}
+.mlscn-custom__input .fa-sort-down{
+  position: absolute;
+  right:10px;
+  user-select: none;
+  cursor: pointer;
+}
+
+.mlscn-custom__input i {
+    position: relative;
+    z-index: 10;
+    cursor: pointer;
+}
+
+.mlscn-show__entries {
+    width: 88px;
+    height: 42px;
+    padding: 9px 16.16px 8px 20px;
+    border-radius: 40px;
+    background-color: var(--mlscn-light-green);
+    color: #ffffff;
+    box-shadow: 0px 4px 4px -1px #00000040;
+}
+.mlscn-show__entries:focus {
+    border-radius: 40px;
+    background-color: var(--mlscn-light-green);
+    color: #ffffff;
+    box-shadow: 0px 4px 4px -1px #00000040;
+    border-color: var(--mlscn-light-green);
+}
+
+
+.mlscn-search__input {
+    width: 217px;
+    padding: 9px 0px 8px 56px;
+    border-radius: 40px;
+    background-color: var(--mlscn-light-green);
+    box-shadow: 0px 4px 4px -1px #00000040;
+    font-family: 'Graphit';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24.66px;
+    color: #ffffff;
+    /* padding-left: 56px; */
+    
+}
+
+.mlscn-search__input:focus {
+    width: 217px;
+    padding: 9px 0px 8px 56px;
+    border-radius: 40px;
+    background-color: var(--mlscn-light-green);
+    box-shadow: 0px 4px 4px -1px #00000040;
+    font-family: 'Graphit';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24.66px;
+    color: #ffffff;
+    border: 1px solid var(--mlscn-light-green);
+    /* padding-left: 56px; */
+    
+}
+
+.mlscn-search__input::placeholder {
+    font-family: 'Graphit';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24.66px;
+    color: #ffffff;
+    width: 100%;
+}
+.mlscn-search__form{
+  position: relative;
+}
+
+.mlscn-search__icon {
+  color:#ffffff;
+  position: absolute;
+  left: 22px;
+  top: 14px;
+  width: 20px; 
+  height: 20px;
+}
+.mlscn-intern__paraContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 67px;
+    padding: 20px;
+    border-radius: 30px;
+    background-color: var(--mlscn-light-green);
+}
+.mlscn-intern__para {
+    font-family: 'Graphit';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28.6px;
+    text-align: center;
+    color: #ffffff;
+
+}
+
+.mlscn-intern__table-stripe {
+  width: 100%;
+  margin-top: 35px;
+}
+
+.mlscn-intern__table-stripe  th:first-child{
+    /* width: 121px; */
+    /* height: 77px; */
+    padding: 21px 16px 21px 16px;
+    gap: 0px;
+    border-radius: 30px 0px 0px 0px;
+    border-bottom: 1px solid var(--mlscn-green);
+    background-color: var(--mlscn-green);
+    color: #ffffff;
+    
+}
+
+.mlscn-intern__table-stripe  th:last-child{
+    /* width: 706px; */
+    padding: 21px 49px 21px 49px;
+    border-radius: 0px 30px 0px 0px;
+    border-bottom: 1px solid var(--mlscn-light-green);
+    background-color: var(--mlscn-light-green);
+    color: #ffffff;
+    font-family: 'Graphit';
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24px;
+
+}
+
+.mlscn-intern__table-stripe tbody tr {
+    border-bottom: 1px solid #418301
+
+}
+.mlscn-intern__table-stripe tbody tr td:first-child {
+    font-family: 'Graphit';
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 28px;
+    text-align: center;
+   background-color: #EBEBEB;
+
+}
+.mlscn-intern__table-stripe tbody tr td:last-child {
+    font-family: 'Graphit';
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+
+}
+
+@media screen and (min-width:576px) {
+    .mlscn-intern__paraContainer {
+        padding: 15px;
+       
+    }
+    .mlscn-intern__para {
+        font-size: 18px;
+        line-height: 28.6px;
+    
+    }
+
+    .mlscn-custom__input .fa-sort-up{
+        right:80px;
+      }
+      .mlscn-custom__input .fa-sort-down{
+        right:80px;
+      }
+}
+
+@media screen and (min-width:768px) {
+    .mlscn-intern__img {
+        background-image: url(../images/news_img.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        height: 186px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        box-shadow: 0px 5px 7.9px 0px #00000033;
+    }
+    .mlscn__show {
+        font-family: 'Graphit';
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 24.66px;
+        margin-right: 6px;
+    
+    }
+    .mlscn__entries {
+        font-family: 'Graphit';
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 24.66px;
+        margin-left: 6px;
+    }
+    
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+    input[type="number"] {
+        -moz-appearance: textfield;
+    }
+    
+    .mlscn-custom__input{
+        position: relative;
+        display: flex;
+        align-items: center;
+    }
+    .mlscn-custom__input input[type="number"]{
+       
+        width: 88px;
+        height: 42px;
+        padding: 9px 16.16px 8px 20px;
+        border-radius: 40px;
+        background-color: var(--mlscn-light-green);
+        color: #ffffff;
+        box-shadow: 0px 4px 4px -1px #00000040;
+    }
+    
+    .mlscn-custom__input .fa-sort-up{
+      position: absolute;
+      right:80px;
+      user-select: none;
+      cursor: pointer;
+    }
+    .mlscn-custom__input .fa-sort-down{
+      position: absolute;
+      right:80px;
+      user-select: none;
+      cursor: pointer;
+    }
+    
+    .mlscn-custom__input i {
+        position: relative;
+        z-index: 10;
+        cursor: pointer;
+    }
+    
+    .mlscn-show__entries {
+        width: 88px;
+        height: 42px;
+        padding: 9px 16.16px 8px 20px;
+        border-radius: 40px;
+        background-color: var(--mlscn-light-green);
+        color: #ffffff;
+        box-shadow: 0px 4px 4px -1px #00000040;
+    }
+    .mlscn-show__entries:focus {
+        border-radius: 40px;
+        background-color: var(--mlscn-light-green);
+        color: #ffffff;
+        box-shadow: 0px 4px 4px -1px #00000040;
+        border-color: var(--mlscn-light-green);
+    }
+    
+    
+    .mlscn-search__input {
+        width: 217px;
+        padding: 9px 0px 8px 56px;
+        border-radius: 40px;
+        background-color: var(--mlscn-light-green);
+        box-shadow: 0px 4px 4px -1px #00000040;
+        font-family: 'Graphit';
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 24.66px;
+        color: #ffffff;
+        /* padding-left: 56px; */
+        
+    }
+    
+    .mlscn-search__input:focus {
+        width: 217px;
+        padding: 9px 0px 8px 56px;
+        border-radius: 40px;
+        background-color: var(--mlscn-light-green);
+        box-shadow: 0px 4px 4px -1px #00000040;
+        font-family: 'Graphit';
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 24.66px;
+        color: #ffffff;
+        border: 1px solid var(--mlscn-light-green);
+        /* padding-left: 56px; */
+        
+    }
+    
+    .mlscn-search__input::placeholder {
+        font-family: 'Graphit';
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 24.66px;
+        color: #ffffff;
+        width: 100%;
+    }
+    .mlscn-search__form{
+      position: relative;
+    }
+    .mlscn-search__icon {
+      color:#ffffff;
+      position: absolute;
+      left: 22px;
+      top: 14px;
+    }
+    .mlscn-intern__paraContainer {
+        width: 827px;
+        background-color: var(--mlscn-light-green);
+        /* margin-left: 205px; */
+      
+    }
+    .mlscn-intern__para {
+        font-family: 'Graphit';
+        font-size: 22px;
+        font-weight: 400;
+        line-height: 28.6px;
+        text-align: center;
+        color: #ffffff;
+    
+    }
+    
+    .mlscn-intern__table-stripe {
+      width: 827px;
+      margin-top: 75px;
+    }
+    
+    .mlscn-intern__table-stripe  th:first-child{
+        width: 121px;
+        padding: 21px 16px 21px 16px;
+        border-radius: 30px 0px 0px 0px;
+        border-bottom: 1px solid var(--mlscn-green);
+        background-color: var(--mlscn-green);
+        color: #ffffff;
+        
+    }
+    
+    .mlscn-intern__table-stripe  th:last-child{
+        width: 706px;
+        padding: 21px 98px 21px 99px;
+        border-radius: 0px 30px 0px 0px;
+        border-bottom: 1px solid var(--mlscn-light-green);
+        background-color: var(--mlscn-light-green);
+        color: #ffffff;
+        font-size: 27px;
+        font-weight: 700;
+        line-height: 35.1px;
+    }
+    
+    .mlscn-intern__table-stripe tbody tr {
+        border-bottom: 1px solid #418301
+    
+    }
+    .mlscn-intern__table-stripe tbody tr td:first-child {
+        font-family: 'Graphit';
+        font-size: 25px;
+        font-weight: 500;
+        line-height: 32.5px;
+        text-align: center;
+       background-color: #EBEBEB;
+    
+    }
+    .mlscn-intern__table-stripe tbody tr td:last-child {
+        font-family: 'Graphit';
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 26px;
+        text-align: center;
+    
+    }
+    
+}
+/* MLSCN APPROVED INTERNSHIP */
 /* FOOTER */
 .mlscn-footer {
     position: relative;
